--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,6 +1,15 @@
 
-.container{
+.wrapper{
     display: flex;
-    flex-direction: row;
-
 }
+
+hr{
+    width: 100vw;
+    border-color: $brand-primary;
+    opacity: 0.2;
+    margin-top: 70px;
+    margin-left: 45px;
+    position: fixed;
+}
+
+
