--- a/src/styles/_copy.scss
+++ b/src/styles/_copy.scss
@@ -1,1 +1,76 @@
 //paragraphs, titles, to-do lists
+
+//PROFILE
+.page-title{
+    font-family: Helvetica;
+    font-weight: lighter;
+    padding-left: 150px;
+    color: $brand-primary;
+    position: fixed;
+}
+
+.page-subtitle{
+    font-family: Helvetica;
+    font-weight: lighter;
+    padding-left: 50px;
+    color: $brand-primary;
+    margin-left: 700px;
+    //margin-top: -50px;
+    position: fixed;
+}
+
+.page-header{
+    margin-top: 30px;
+    position: fixed;
+}
+
+.profile-details{
+    font-family: Helvetica;
+    font-weight: lighter;
+    float: left;
+    margin-top: -80px;
+    margin-left: 300px;
+}
+
+.profile-detail__title{
+    font-weight: lighter;
+}
+
+.profile-detail--large{
+    font-size: 30px;
+}
+
+.profile-detail__info{
+    font-size: 14px;
+}
+
+//CLASSES
+.classes-details{
+    float: left;
+    margin-left: 200px;
+    margin-top: 50px;
+    display: grid;
+    grid-gap: 50px;
+
+
+}
+
+.classes-detail{
+    box-shadow: 1px 5px 18px #e0e0e0;
+    padding: 10px;
+
+    &:hover{
+        box-shadow: 1px 5px 18px #b4b4b4;
+    }
+}
+
+.todo-details{
+    float: left;
+    margin-top: 40px;
+    margin-left: 400px;
+}
+
+.todo-detail{
+    margin-top: 30px;
+}
+
