--- a/src/styles/_pictures.scss
+++ b/src/styles/_pictures.scss
@@ -2,6 +2,8 @@
     border-radius: 50%;
     border: 2px solid lightgray;
     margin: -70px 80px;
+    margin-top: 100px;
+    margin-left: 150px;
 
     filter: saturate(0%);
 }
