Cleaned up positioning

--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -6,7 +6,7 @@
     </a>
 
     <a href="classes.html" class="nav-item">
-        <span class="nav__icon nav__icon--class"></span>
+        <span class="nav__icon nav__icon--class nav-item--active"></span>
         <span class="nav__text">Classes</span>
     </a>
 
@@ -26,3 +26,16 @@
     </a>
 
 </nav>
+
+<script>
+    var header = document.getElementById("main-nav");
+    var icons = header.getElementsByClassName("nav-item");
+
+    for(var i = 0; i < icons.length; i++){
+        btns[i].addEventListener("click", function() {
+            var current = document.getElementByClassName("nav-item--active");
+            current[0].className = current[0].className.replace(" nav-item--active", "");
+            this.className += " nav-item--active";
+        });
+    }
+</script>
