--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -6,7 +6,7 @@
     </a>
 
     <a href="classes.html" class="nav-item">
-        <span class="nav__icon nav__icon--class nav-item--active"></span>
+        <span class="nav__icon nav__icon--class"></span>
         <span class="nav__text">Classes</span>
     </a>
 
@@ -27,7 +27,7 @@
 
 </nav>
 
-<script>
+<!-- <script>
     var header = document.getElementById("main-nav");
     var icons = header.getElementsByClassName("nav-item");
 
@@ -38,4 +38,4 @@
             this.className += " nav-item--active";
         });
     }
-</script>
+</script> -->
