--- a/src/styles/_pictures.scss
+++ b/src/styles/_pictures.scss
@@ -12,3 +12,25 @@
     filter: saturate(0%);
 }
 
+.rectangle{
+    height: 130px;
+    width: 280px;
+    margin-bottom: 20px;
+}
+
+.rectangle--lightorange{
+    background-color: #feb236;
+}
+
+.rectangle--purple{
+    background-color: #6b5b95;
+}
+
+.rectangle--pink{
+    background-color: #d64161;
+}
+
+.rectangle--darkorange{
+    background-color: #ff7b25;
+}
+
