--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -16,5 +16,9 @@ hr{
     margin: 50px;
 }
 
-
+// @media only screen and (max-width: 780px) {
+//     .classes-details{
+//         grid-template-columns: auto;
+//     }
+// }
 
