--- a/src/styles/_copy.scss
+++ b/src/styles/_copy.scss
@@ -57,9 +57,6 @@
 }
 
 .classes-detail {
-
-
-
     box-shadow: 1px 5px 18px #e0e0e0;
     padding: 10px;
     border-radius: 5px;
@@ -107,9 +104,21 @@
 
 .todo-detail {
     margin-top: 30px;
+    font-family: Helvetica;
+    font-weight: lighter;
 }
 
 .todo-detail__title{
     color: $brand-secondary;
+    width: 100%;
+    height: 60px;
+    top: 0;
+    background: white;
+
+    &:hover{
+        text-decoration: none;
+    }
 }
+
+
 
