--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -21,13 +21,13 @@
     }
 }
 
-.nav-item--active{
-    background: white;
+// .nav-item--active{
+//     background: white;
 
-    &:hover{
-        background: white;
-    }
-}
+//     &:hover{
+//         background: white;
+//     }
+// }
 
 .nav__icon {
     width: 100%;
@@ -37,6 +37,7 @@
     background: {
         image: url('../images/icon_classes_white.png');
         size: contain;
+        // size: 75%;
         repeat: no-repeat;
     }
     display: block;
