Made changes to To Do page

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -22,3 +22,15 @@ hr{
 //     }
 // }
 
+
+.todo__container{
+    width: 85vw;
+    height: 25vh;
+    margin: 150px 0px 0px 150px;
+    // border: 2px solid $brand-secondary;
+    border-radius: 10px;
+    box-shadow: 1px 5px 18px #e0e0e0;
+    position: fixed;
+}
+
+
