--- a/src/styles/_copy.scss
+++ b/src/styles/_copy.scss
@@ -46,7 +46,7 @@
 .classes-details {
     float: left;
     margin-left: 200px;
-    margin-top: 140px;
+    margin-top: 130px;
     display: grid;
     grid-gap: 50px;
 
@@ -113,12 +113,85 @@
     width: 100%;
     height: 60px;
     top: 0;
-    background: white;
 
     &:hover{
         text-decoration: none;
     }
 }
 
+//TO DO
+
+.todo-toggle{
+    display: flex;
+    padding: 25px 150px 0px 90px;
+    margin-left: 60px;
+    margin-top: -10px;
+    font-family: Helvetica;
+    font-weight: lighter;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.toggle__item {
+    list-style-type: none;
+}
+
+.todo-toggle__list1{
+    flex-direction: column;
+}
+
+.todo-toggle__list2{
+    flex-direction: column;
+}
+
+.todo-toggle__list3{
+    flex-direction: column;
+}
+
+input[type="checkbox"]{
+    margin-left: -2em;
+}
+
+input[type="radio"]{
+    margin-left: -2em;
+}
+
+.result__details{
+    display: flex;
+    margin: 80px;
+    margin-top: 140px;
+    font-family: Helvetica;
+    font-weight: lighter;
+    overflow-y: scroll;
+    max-height: 35.7vh;
+    width: 240px;
+    float: left;
+    border-bottom: 1px solid rgba(3, 3, 3, 0.2);
+    justify-content: center;
+}
+
+.result{
+    display: flex;
+    font-weight: lighter;
+    position: fixed;
+    background: white;
+
+    margin: 80px;
+    margin-top: 90px;
+    font-family: Helvetica;
+    font-weight: lighter;
+    overflow-y: scroll;
+    max-height: 42vh;
+    width: 240px;
+    justify-content: center;
+}
+
+.result__title2{
+    margin-left: 480px;
+}
+
+.result__title3{
+    margin-left: 880px;
+}
 
 
