--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -1,8 +1,8 @@
 .main-nav{
+    width: 10vw;
     height: 100vh;
     list-style-type: none;
     background-color: #2d3b45;
-    margin: -10px;
     text-align: center;
     position: fixed;
 }
