--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,36 +1,61 @@
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+}
 
-.wrapper{
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+}
+
+.wrapper {
     display: flex;
 }
 
-hr{
-    width: 100vw;
-    border-color: $brand-primary;
-    opacity: 0.2;
-    margin-top: 70px;
-    margin-left: 45px;
-    position: fixed;
-}
-
-.container{
-    margin: 50px;
-}
-
-// @media only screen and (max-width: 780px) {
-//     .classes-details{
-//         grid-template-columns: auto;
-//     }
+// .todo__container{
+//     width: 85vw;
+//     height: 25vh;
+//     margin: 150px 0px 0px 150px;
+//     // border: 2px solid $brand-secondary;
+//     border-radius: 10px;
+//     box-shadow: 1px 5px 18px #e0e0e0;
+//     position: fixed;
 // }
 
-
-.todo__container{
-    width: 85vw;
-    height: 25vh;
-    margin: 150px 0px 0px 150px;
-    // border: 2px solid $brand-secondary;
-    border-radius: 10px;
-    box-shadow: 1px 5px 18px #e0e0e0;
-    position: fixed;
+///// MOVE TO PAGE.SCSS
+.page {
+    min-height: 100vh;
+    width: calc( 100% - 10vw); // use nav variable here
+    position: relative;
+    left: 10vw;
 }
 
+.page__header {
+    background: #eee; // make a var and use
+    position: fixed;
+    width: calc(100% - 10vw); // use nav variable here
+    left: 10vw; // make this a variable
+    height: 15vh; // make this a variable
+    z-index: 10;
+}
 
+.page__body {
+    width: 100%;
+    min-height: calc(100% - 15vh); // use the header variale here
+    position: relative;
+    padding: 1.25rem; // make this a variable and use every where
+    // you can use $padding/2 or $padding*2 or just $padding
+    top: 15vh; // use the header variale here
+    display: flex;
+}
+.page__desc {
+    flex: 1;
+}
+.page__details {
+    flex: 3;
+}
