--- a/src/styles/_pictures.scss
+++ b/src/styles/_pictures.scss
@@ -1,17 +1,16 @@
-.profile-img{
+
+.profile__img{
+    max-height: 150px;
     border-radius: 50%;
     border: 2px solid lightgray;
-    margin: -70px 80px;
-    margin-top: 100px;
-    margin-left: 150px;
-
     filter: saturate(0%);
 }
 
 .nav__icon--profile{
     filter: saturate(0%);
 }
-
+// these are temp
+// and put in correct file
 .rectangle{
     height: 130px;
     width: 280px;
