--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,26 +1,26 @@
-<nav class="main-nav">
+<nav class="nav">
 
-    <a href="index.html" class="nav-item">
+    <a href="index.html" class="nav__item">
         <span class="nav__icon nav__icon--profile"></span>
         <span class="nav__text">Profile</span>
     </a>
 
-    <a href="classes.html" class="nav-item">
+    <a href="classes.html" class="nav__item">
         <span class="nav__icon nav__icon--class"></span>
         <span class="nav__text">Classes</span>
     </a>
 
-    <a href="todo.html" class="nav-item">
+    <a href="todo.html" class="nav__item">
         <span class="nav__icon nav__icon--todo"></span>
         <span class="nav__text">To Do</span>
     </a>
 
-    <a href="tracker.html" class="nav-item">
+    <a href="tracker.html" class="nav__item">
         <span class="nav__icon nav__icon--tracker"></span>
         <span class="nav__text">Tracker</span>
     </a>
 
-    <a href="inbox.html" class="nav-item">
+    <a href="inbox.html" class="nav__item">
         <span class="nav__icon nav__icon--inbox"></span>
         <span class="nav__text">Inbox</span>
     </a>
