--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,7 +3,10 @@
 @import "base";
 
 @import "buttons";
-@import "card";
-@import "copy";
 @import "navigation";
-@import "pictures";
+@import "page";
+@import "profile";
+@import "classes";
+@import "todo";
+@import "tracker";
+@import "inbox";
